--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "fmelchor@intecfra.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-4": {
